# growfood-demand-prediction

./: 00-preprocess_data.ipynb  00-preprocess_marketing.ipynb  01-eda.ipynb  01-features_lags.ipynb  01-orders_count_lag_correlation.ipynb  02-train_etna.ipynb  02-train_etna.py  02-train_linear.ipynb  02-train_rnn.ipynb  03-cb.ipynb  03-search-best-holtW.ipynb  README.md  client.py  estimate.py  merged.json  november.json
data/: 2022_11.txt  2022_12.txt
pipeline/: 00-train.ipynb  01-exp_261222_data.ipynb  01-exp_data.ipynb  Dockerfile  __init__.py  docker-compose.yml  experiment_121222.py  main.py  pyproject.toml  run_docker.sh  run_server.sh  sarima_hpo.py  server.py
pipeline/loader/: dataset_loader.py  ts_dataset.py
pipeline/loader/transforms/: is_weekend_transform.py  moving_avg_transform.py  transform.py
pipeline/models/: __init__.py  lstm_predictor.py  sarimax_predictor.py
pipeline/src/: __init__.py  demand_request.py  predictive_model.py  predictor.py  routes.py
pipeline/src/loader/: __init__.py
pipeline/src/models/: etna_predictor.py  lstm_mlp.py  lstm_predictor.py
pipeline/src/routers/: predict.py
pipeline/src/transforms/: holt_winters_predict_transform.py  is_weekend_transform.py  lag_transform.py  moving_avg_transform.py  weekday_transform.py
pipeline/transforms/: __init__.py  lag_transform.py  weekday_transform.py
