[tool.poetry]
name = "growfood_demand"
version = "0.1.0"
description = ""
authors = ["ARQtty <ShamovIA@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
torch = "^1.13.1"
loguru = "^0.6.0"
pandas = "^1.5.2"
statsmodels = "^0.13.5"
tqdm = "^4.64.1"
uvloop = "^0.17.0"
etna= "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
